--- a/Web Fundamentals (HTML + CSS) май 2014/Homeworks/HTML5-Overview/styles/tags.css
+++ b/Web Fundamentals (HTML + CSS) май 2014/Homeworks/HTML5-Overview/styles/tags.css
@@ -1,1 +1,15 @@
-/** todo */
+/*logo*/
+#SoftUniLogo{
+    width: 200px;
+    float: right;
+    margin-top: -60px;
+    margin-left: -200px;
+}
+
+/* Number of sheet*/
+#Sheet {
+    color: white;
+    float: right;
+    margin-bottom: -60px;
+    font-size: 20px;
+}
